--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "cgb-scripts": "1.9.4",
     "classnames": "^2.2.5",
-    "jsonp": "^0.2.1"
+    "jsonp": "^0.2.1",
+    "prettier": "^1.11.1"
   }
 }
