--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
 		"watch": "wp-scripts start",
 		"build": "wp-scripts build",
 		"lint:css": "wp-scripts lint-style",
+		"lint-css:fix": "npm run lint:css -- --fix",
 		"lint:js": "wp-scripts lint-js",
+		"lint-js:fix": "npm run lint:js -- --fix",
 		"lint:php": "composer run lint",
 		"packages-update": "wp-scripts packages-update",
 		"postinstall": "wp-scripts build && composer install"
