--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"Gutenberg"
 	],
 	"dependencies": {
+		"@glidejs/glide": "^3.4.1",
 		"pure-react-carousel": "^1.27.1"
 	},
 	"devDependencies": {
