--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 	"minimum-stability": "stable",
 	"require": {},
 	"require-dev": {
-		"webdevstudios/php-coding-standards": "^1.0",
+		"webdevstudios/php-coding-standards": "~1.3.0",
 		"phpcompatibility/php-compatibility": "^9.3"
 	},
 	"scripts": {
