--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"@webdevstudios/css-coding-standards": "^1.0.1",
 		"@webdevstudios/js-coding-standards": "^1.3.0",
 		"@wordpress/scripts": "^12.5.0",
-		"ignore-emit-webpack-plugin": "^2.0.5"
+		"ignore-emit-webpack-plugin": "^2.0.5",
+		"prettier": "^2.1.2"
 	},
 	"scripts": {
 		"start": "wp-scripts start",
