--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -1,10 +1,13 @@
 <?xml version="1.0"?>
-<ruleset name="WDSBlockStarter">
-	<!-- Set a description for this ruleset. -->
-	<description>A custom ruleset to take in account both WordPress and WebDevStudios code standards.</description>
-	<!-- Include the WordPress-Extra ruleset, with some WDS exclusions. -->
-	<rule ref="WebDevStudios">
-		<exclude name="WordPress.Files.FileName.NotHyphenatedLowercase"/>
-		<exclude name="WordPress.Files.FileName.InvalidClassFileName"/>
-	</rule>
+	<ruleset name="wd_s">
+
+	<rule ref="WebDevStudios"/>
+
+	<!-- Ignore build and lib folders -->
+	<exclude-pattern>*/build/*</exclude-pattern>
+	<exclude-pattern>*/node_modules/*</exclude-pattern>
+	<exclude-pattern>*/vendor/*</exclude-pattern>
+
+	<!-- Make sure, in case it's not configured correctly, we don't lint these files -->
+	<exclude-pattern>*/*\.(scss|css|js|jsx|ts|tsx)$</exclude-pattern>
 </ruleset>
