--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
 		"url": "https://github.com/WebDevStudios/WDS-Blocks/issues"
 	},
 	"homepage": "https://github.com/WebDevStudios/WDS-Blocks#readme",
-	"main": "src/index.js",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/WebDevStudios/WDS-Blocks"
+	},
+	"main": "src/index.js",
+	"engines": {
+		"node": ">=12",
+		"npm": ">=6"
 	},
 	"keywords": [
 		"Gutenberg"
@@ -23,21 +27,108 @@
 	"devDependencies": {
 		"@webdevstudios/css-coding-standards": "^1.0.1",
 		"@webdevstudios/js-coding-standards": "^1.3.0",
+		"@webdevstudios/npm-scripts": "^1.1.0",
 		"@wordpress/scripts": "^12.5.0",
+		"husky": "^4.3.0",
 		"ignore-emit-webpack-plugin": "^2.0.5",
-		"prettier": "^2.1.2"
+		"lint-staged": "^10.5.1",
+		"npm-run-all": "^4.1.5",
+		"prettier": "^2.1.2",
+		"run-s": "0.0.0",
+		"stylelint": "^13.7.2",
+		"stylelint-config-wordpress": "^17.0.0"
 	},
 	"scripts": {
-		"start": "wp-scripts start",
-		"dev": "wp-scripts start",
-		"watch": "wp-scripts start",
-		"build": "wp-scripts build",
-		"lint:css": "wp-scripts lint-style",
-		"lint-css:fix": "npm run lint:css -- --fix",
-		"lint:js": "wp-scripts lint-js",
-		"lint-js:fix": "npm run lint:js -- --fix",
+		"start": "wds-start",
+		"dev": "wds-start",
+		"watch": "wds-start",
+		"build": "wds-build",
+		"format": "wds-format-js && wds-format-styles && npm run format:prettier",
+		"format:prettier": "[[ -f .prettierignore ]] && ./node_modules/.bin/prettier ./ --write",
+		"lint": "run-s lint:js lint:styles lint:php",
+		"lint:js": "wds-format-js && wds-lint-js",
 		"lint:php": "composer run lint",
-		"packages-update": "wp-scripts packages-update",
-		"postinstall": "wp-scripts build && composer install"
+		"lint:styles": "wds-format-styles && wds-lint-style",
+		"postinstall": "npm run build && composer install --quiet"
+	},
+	"eslintConfig": {
+		"extends": "@webdevstudios/js-coding-standards",
+		"ignorePatterns": [
+			"**/*.css",
+			"**/*.json",
+			"**/*.lock",
+			"**/*.php",
+			"**/*.png",
+			"**/*.scss",
+			"**/*.svg",
+			"*.min.js",
+			".*dist.js",
+			".*rc.js",
+			"./.*.js",
+			".cache/**/*",
+			".git*",
+			"build/**/*",
+			"cache/**/*",
+			"dist/**/*",
+			"node_modules/**/*",
+			"vendor/**/*"
+		]
+	},
+	"stylelint": {
+		"extends": "stylelint-config-wordpress/scss",
+		"rules": {
+			"at-rule-no-unknown": null,
+			"block-no-empty": true,
+			"font-family-no-duplicate-names": true,
+			"font-family-no-missing-generic-family-keyword": true,
+			"function-url-quotes": "always",
+			"max-line-length": null,
+			"no-descending-specificity": null,
+			"no-duplicate-selectors": null,
+			"property-no-unknown": null,
+			"scss/at-rule-no-unknown": null,
+			"string-quotes": "single"
+		},
+		"ignoreFiles": [
+			"**/*.js",
+			"**/*.json",
+			"**/*.jsx",
+			"**/*.lock",
+			"**/*.php",
+			"**/*.png",
+			"**/*.svg",
+			"**/*.ts",
+			"**/*.tsx",
+			"*.min.js",
+			".*dist.js",
+			".*rc.js",
+			"./.*.js",
+			".cache/**/*",
+			".git*",
+			"build/**/*",
+			"cache/**/*",
+			"dist/**/*",
+			"./style.css",
+			"node_modules/**/*",
+			"vendor/**/*"
+		]
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.js": "npm run lint:js",
+		"*.jsx": "npm run lint:js",
+		"*.ts": "npm run lint:js",
+		"*.tsx": "npm run lint:js",
+		"*.vue": "npm run lint:js",
+		"*.css": "npm run lint:styles",
+		"*.scss": "npm run lint:styles",
+		"*.php": "npm run lint:php",
+		"*.json": "prettier ./**/*.json --write",
+		"*.md": "prettier ./**/*.md --write",
+		"*.yml": "prettier ./**/*.yml --write"
 	}
 }
