--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 	},
 	"main": "src/index.js",
 	"engines": {
-		"node": ">=12",
-		"npm": ">=6"
+		"node": ">=14",
+		"npm": ">=7"
 	},
 	"keywords": [
 		"Gutenberg"
@@ -26,13 +26,12 @@
 		"eslint": "^7.21.0"
 	},
 	"devDependencies": {
+		"@arkweid/lefthook": "^0.7.2",
 		"@webdevstudios/css-coding-standards": "^1.0.1",
 		"@webdevstudios/js-coding-standards": "^1.3.0",
 		"@webdevstudios/npm-scripts": "^1.1.1",
 		"@wordpress/scripts": "^13.0.3",
-		"husky": "^5.1.3",
 		"ignore-emit-webpack-plugin": "^2.0.6",
-		"lint-staged": "^10.5.4",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.2.1",
 		"run-s": "0.0.0",
@@ -113,16 +112,5 @@
 			"node_modules/**/*",
 			"vendor/**/*"
 		]
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
-	"lint-staged": {
-		"*.{js,jsx,ts,tsx}": "npx eslint --fix",
-		"*.{css,scss}": "npx stylelint --fix",
-		"*.{md,html,json}": "npx prettier --write",
-		"*.php": "npm run lint:php"
 	}
 }
