--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,18 @@
 			"email": "contact@webdevstudios.com"
 		}
 	],
-	"minimum-stability": "stable",
-	"require": {},
-	"require-dev": {
-		"webdevstudios/php-coding-standards": "~1.3.0",
-		"phpcompatibility/php-compatibility": "^9.3"
+	"require": {
+		"composer/installers": "^1.5"
 	},
 	"scripts": {
-		"lint": "composer run compat && composer run lint:php",
-		"format": "./vendor/bin/phpcbf -p -v . --standard=.phpcs.xml.dist --extensions=php --report-summary --report-source --ignore='*/node_modules/*,*/vendor/*,*/build/*'",
-		"lint:php": "./vendor/bin/phpcs -p -s -n . --standard=.phpcs.xml.dist --extensions=php -n --colors --ignore='*/node_modules/*,*/vendor/*,*/build/*'",
-		"compat": "./vendor/bin/phpcs -p . --standard=PHPCompatibility --extensions=php --runtime-set testVersion 7.4 --ignore='.github/*,vendor/*' --warning-severity=8 -d memory_limit=4096M || true || exit"
+		"lint": "composer run lint:php",
+		"lint:php": "composer run lint:php-compat && composer run lint:phpcs",
+		"lint:php-compat": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs -p . --standard=PHPCompatibility --extensions=php --runtime-set testVersion 7.4 --ignore='.github/*,vendor/*' --warning-severity=8 -d memory_limit=-1",
+		"lint:phpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs -d memory_limit=-1 --standard=./.phpcs.xml.dist --extensions=php -n --colors **/*.php",
+		"debug:phpcs": "which phpcs && phpcs -i"
+	},
+	"require-dev": {
+		"phpcompatibility/php-compatibility": "~9.3",
+		"webdevstudios/php-coding-standards": "~1.3.0"
 	}
 }
