--- a/package.json
+++ b/package.json
@@ -1,116 +1,58 @@
 {
 	"name": "wds-blocks",
 	"version": "2.0.0",
+	"private": true,
 	"description": "A block starter for WebDevStudios projects.",
 	"author": "WebDevStudios",
-	"license": "GPL-3.0",
-	"bugs": {
-		"url": "https://github.com/WebDevStudios/WDS-Blocks/issues"
-	},
+	"license": "GPL-2.0-or-later",
+	"keywords": [
+		"Gutenberg"
+	],
 	"homepage": "https://github.com/WebDevStudios/WDS-Blocks#readme",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/WebDevStudios/WDS-Blocks"
 	},
-	"main": "src/index.js",
+	"bugs": {
+		"url": "https://github.com/WebDevStudios/WDS-Blocks/issues"
+	},
 	"engines": {
 		"node": ">=14",
 		"npm": ">=7"
 	},
-	"keywords": [
-		"Gutenberg"
-	],
+	"main": "src/index.js",
 	"dependencies": {
 		"@glidejs/glide": "^3.4.1",
-		"classnames": "^2.2.6",
-		"eslint": "^7.21.0"
+		"classnames": "^2.3.1"
 	},
 	"devDependencies": {
-		"@arkweid/lefthook": "^0.7.2",
-		"@webdevstudios/css-coding-standards": "^1.0.1",
-		"@webdevstudios/js-coding-standards": "^1.3.0",
-		"@webdevstudios/npm-scripts": "^1.1.1",
-		"@wordpress/scripts": "^13.0.3",
+		"@arkweid/lefthook": "^0.7.6",
+		"@wordpress/scripts": "^16.1.3",
+		"eslint": "^7.29.0",
+		"eslint-plugin-eslint-comments": "^3.2.0",
 		"ignore-emit-webpack-plugin": "^2.0.6",
 		"npm-run-all": "^4.1.5",
-		"prettier": "^2.2.1",
-		"run-s": "0.0.0",
-		"stylelint": "^13.12.0",
+		"prettier": "npm:@wordpress/prettier-config",
+		"stylelint": "^13.13.1",
+		"stylelint-config-prettier": "^8.0.2",
 		"stylelint-config-wordpress": "^17.0.0"
 	},
 	"scripts": {
-		"start": "wds-start",
-		"dev": "wds-start",
-		"watch": "wds-start",
-		"build": "wds-build",
-		"format": "wds-format-js && wds-format-styles && npm run format:prettier",
-		"format:prettier": "[[ -f .prettierignore ]] && ./node_modules/.bin/prettier ./ --write",
-		"lint": "run-s lint:js lint:styles lint:php",
-		"lint:js": "wds-format-js && wds-lint-js",
-		"lint:php": "composer run lint",
-		"lint:styles": "wds-format-styles && wds-lint-style",
+		"start": "wp-scripts start",
+		"dev": "wp-scripts start",
+		"watch": "wp-scripts ",
+		"build": "wp-scripts build",
+		"format": "run-p format:*",
+		"format:css": "npx prettier '**/*.scss' --write && npm run lint:css -- --fix",
+		"format:js": "wp-scripts format && npm run lint:js -- --fix",
+		"format:md": "npx markdownlint-cli . --fix",
+		"format:php": "composer run-script format",
+		"lint": "run-p lint:*",
+		"lint:css": "wp-scripts lint-style '**/*.scss'",
+		"lint:js": "wp-scripts lint-js",
+		"lint:md": "wp-scripts lint-md-docs",
+		"lint:php": "composer run-script lint",
+		"lint:pkg-json": "wp-scripts lint-pkg-json",
 		"postinstall": "npm run build && composer install --quiet"
-	},
-	"eslintConfig": {
-		"extends": "@webdevstudios/js-coding-standards",
-		"ignorePatterns": [
-			"**/*.css",
-			"**/*.json",
-			"**/*.lock",
-			"**/*.php",
-			"**/*.png",
-			"**/*.scss",
-			"**/*.svg",
-			"*.min.js",
-			".*dist.js",
-			".*rc.js",
-			"./.*.js",
-			".cache/**/*",
-			".git*",
-			"build/**/*",
-			"cache/**/*",
-			"dist/**/*",
-			"node_modules/**/*",
-			"vendor/**/*"
-		]
-	},
-	"stylelint": {
-		"extends": "stylelint-config-wordpress/scss",
-		"rules": {
-			"at-rule-no-unknown": null,
-			"block-no-empty": true,
-			"font-family-no-duplicate-names": true,
-			"font-family-no-missing-generic-family-keyword": true,
-			"function-url-quotes": "always",
-			"max-line-length": null,
-			"no-descending-specificity": null,
-			"no-duplicate-selectors": null,
-			"property-no-unknown": null,
-			"scss/at-rule-no-unknown": null,
-			"string-quotes": "single"
-		},
-		"ignoreFiles": [
-			"**/*.js",
-			"**/*.json",
-			"**/*.jsx",
-			"**/*.lock",
-			"**/*.php",
-			"**/*.png",
-			"**/*.svg",
-			"**/*.ts",
-			"**/*.tsx",
-			"*.min.js",
-			".*dist.js",
-			".*rc.js",
-			"./.*.js",
-			".cache/**/*",
-			".git*",
-			"build/**/*",
-			"cache/**/*",
-			"dist/**/*",
-			"./style.css",
-			"node_modules/**/*",
-			"vendor/**/*"
-		]
 	}
 }
