--- a/package.json
+++ b/package.json
@@ -23,7 +23,18 @@
 	"main": "src/index.js",
 	"dependencies": {
 		"@glidejs/glide": "^3.4.1",
-		"classnames": "^2.3.1"
+		"@wordpress/block-editor": "^6.1.8",
+		"@wordpress/blocks": "^9.1.4",
+		"@wordpress/components": "^14.1.5",
+		"@wordpress/compose": "^4.1.2",
+		"@wordpress/data": "^5.1.2",
+		"@wordpress/element": "^3.1.1",
+		"@wordpress/hooks": "^3.1.1",
+		"@wordpress/i18n": "^4.1.1",
+		"classnames": "^2.3.1",
+		"glob": "^7.1.7",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2"
 	},
 	"devDependencies": {
 		"@arkweid/lefthook": "^0.7.6",
@@ -53,6 +64,6 @@
 		"lint:md": "wp-scripts lint-md-docs",
 		"lint:php": "composer run-script lint",
 		"lint:pkg-json": "wp-scripts lint-pkg-json",
-		"postinstall": "npm run build && composer install --quiet"
+		"postinstall": "npm run build"
 	}
 }
