reorder scripts. remove post install hook

--- a/package.json
+++ b/package.json
@@ -49,10 +49,8 @@
 		"stylelint-config-wordpress": "^17.0.0"
 	},
 	"scripts": {
-		"start": "wp-scripts start",
-		"dev": "wp-scripts start",
-		"watch": "wp-scripts ",
 		"build": "wp-scripts build",
+		"dev": "wp-scripts start",
 		"format": "run-p format:*",
 		"format:css": "npx prettier '**/*.scss' --write && npm run lint:css -- --fix",
 		"format:js": "wp-scripts format && npm run lint:js -- --fix",
@@ -64,6 +62,6 @@
 		"lint:md": "wp-scripts lint-md-docs",
 		"lint:php": "composer run-script lint",
 		"lint:pkg-json": "wp-scripts lint-pkg-json",
-		"postinstall": "npm run build"
+		"start": "wp-scripts start"
 	}
 }
