--- a/lefthook.yml
+++ b/lefthook.yml
@@ -9,10 +9,10 @@ pre-commit:
             glob: '*.php'
             run: ./vendor/bin/phpcs {staged_files}
         formatstyles:
-            glob: '*.{css,scss}'
+            glob: '*.{scss}'
             run: npx prettier {staged_files} --write
         lintstyles:
-            glob: '*.{css,scss}'
+            glob: '*.{scss}'
             run: npx stylelint {staged_files} --fix
         formatjavascript:
             glob: '*.{js,ts,tsx}'
