--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
 	},
 	"devDependencies": {
 		"@arkweid/lefthook": "^0.7.6",
+		"@wordpress/prettier-config": "^1.1.0",
 		"@wordpress/scripts": "^17.1.0",
 		"eslint": "^7.32.0",
 		"eslint-plugin-eslint-comments": "^3.2.0",
 		"ignore-emit-webpack-plugin": "^2.0.6",
 		"npm-run-all": "^4.1.5",
-		"prettier": "npm:@wordpress/prettier-config",
+		"prettier": "npm:wp-prettier@^2.2.1-beta-1",
 		"stylelint": "^13.13.1",
 		"stylelint-config-prettier": "^8.0.2",
 		"stylelint-config-wordpress": "^17.0.0"
