--- a/package.json
+++ b/package.json
@@ -23,31 +23,28 @@
 	"main": "src/index.js",
 	"dependencies": {
 		"@glidejs/glide": "^3.4.1",
-		"@wordpress/block-editor": "^7.0.2",
+		"@wordpress/block-editor": "^8.0.11",
 		"@wordpress/blocks": "^11.1.0",
-		"@wordpress/components": "^17.0.0",
+		"@wordpress/components": "^19.1.5",
 		"@wordpress/compose": "^5.0.2",
 		"@wordpress/data": "^6.1.0",
 		"@wordpress/element": "^4.0.1",
 		"@wordpress/hooks": "^3.2.0",
 		"@wordpress/i18n": "^4.2.2",
 		"classnames": "^2.3.1",
-		"glob": "^7.2.0",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"glob": "^7.2.0"
 	},
 	"devDependencies": {
 		"@arkweid/lefthook": "^0.7.7",
 		"@wordpress/prettier-config": "^1.1.1",
-		"@wordpress/scripts": "^18.0.1",
-		"eslint": "^7.32.0",
+		"@wordpress/scripts": "^19.2.2",
+		"@wordpress/stylelint-config": "^19.1.0",
 		"eslint-plugin-eslint-comments": "^3.2.0",
 		"ignore-emit-webpack-plugin": "^2.0.6",
 		"npm-run-all": "^4.1.5",
 		"prettier": "npm:wp-prettier@^2.2.1-beta-1",
 		"stylelint": "^13.13.1",
-		"stylelint-config-prettier": "^8.0.2",
-		"stylelint-config-wordpress": "^17.0.0"
+		"stylelint-config-prettier": "^9.0.3"
 	},
 	"scripts": {
 		"build": "wp-scripts build",
